<resources>
    <string name="anywhere">Куда угодно</string>
    <string name="arive_evening">Прилет вечером</string>
    <string name="back">обратно</string>
    <string name="buy">Купить</string>
    <string name="buy_on_kupibilet">На сайте Купибилет</string>
    <string name="complex_route">Сложный маршрут</string>
    <string name="connections">Пересадки</string>
    <string name="connections_no">Без пересадок</string>
    <string name="connections_no_airport">Без смены аэропорта</string>
    <string name="connections_no_night">Без ночной пересадки</string>
    <string name="connections_no_foreign">Без пересадок в странах, закрытых для туристов</string>
    <string name="connections_number">Количество пересадок</string>
    <string name="cheap_rate">Дешевый тариф</string>
    <string name="direct_flights">Прямые рей(ль)сы</string>
    <string name="direct_only">Только прямые</string>
    <string name="done">Готово</string>
    <string name="econom">эконом</string>
    <string name="exchange_no_free">Обмен платный</string>
    <string name="exchange_change">Изменить обмен или возврат</string>
    <string name="in_flight">в пути</string>
    <string name="filter">Фильтр</string>
    <string name="filters">Фильтры</string>
    <string name="filters_popular">Популярные фильтры</string>
    <string name="flights_search">Поиск дешевых\nавиабилетов</string>
    <string name="fly_away_in_musical_way">Музыкально отлететь</string>
    <string name="hot">Горячие билеты</string>
    <string name="luggage_add">Добавить багаж</string>
    <string name="luggage_included">Багаж включен</string>
    <string name="luggage_hand">Ручная кладь</string>
    <string name="luggage_only">Только с багажом</string>
    <string name="most_comfortable">Самый удобный</string>
    <string name="more">Подробнее</string>
    <string name="price_chart">График цен</string>
    <string name="reservations_no">Без раздельных бронирований</string>
    <string name="return_no">Без возврата</string>
    <string name="show_all_flights">Показать все</string>
    <string name="show_all_tickets">Посмотреть все билеты</string>
    <string name="show_tickets_above">Показать билеты от</string>
    <string name="subscript">Подписка на цену</string>
    <string name="title_activity_flight_tickets">FlightTicketsActivity</string>
    <string name="weekend">Выходные</string>
    <string name="where">Куда - </string>
    <string name="cd_search">Search</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cdimage">cdImage</string>
    <string name="popular_route">Популярное направление</string>
    <string name="dest_country_hint">Куда - Турция</string>
    <string name="dest_city_default">Минск</string>
    <string name="tools_data">24 фев, <font color="#FF0000">сб</font></string>
</resources>