<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    style="@style/Theme.Effectivem.CardViewStyle"
    tools:context=".screens.home.SearchDialogFragment"
    tools:theme="@style/Theme.Effectivem">

    <androidx.cardview.widget.CardView
        style="@style/Theme.Effectivem.CardViewNestedStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:paddingEnd="@dimen/view_padding"
                tools:ignore="RtlSymmetry">

                <ImageButton
                    android:id="@+id/search"
                    android:layout_width="48dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:contentDescription="@string/cd_search"
                    android:scaleType="centerInside"
                    tools:style="?attr/imageButtonStyle"
                    android:src="@drawable/search"/>
            </FrameLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="8dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/dest_city"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:text="@string/dest_city_default" />
                </com.google.android.material.textfield.TextInputLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="?attr/colorOnSurface"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="8dp"
                    app:hintEnabled="false">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/dest_country"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/dest_country_hint"
                        />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.cardview.widget.CardView>