<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="fill_vertical"
    android:orientation="vertical"
    android:padding="16dp"
    tools:background="@color/grey_2"
    tools:context=".screens.home.SearchDialogFragment"
    tools:style="@style/Theme.Effectivem.BottomSheetDialog"
    tools:theme="@style/Theme.Effectivem">

    <Space
        android:layout_width="0dp"
        android:layout_height="16dp" />

    <View
        android:layout_width="38dp"
        android:layout_height="5dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="8dp"
        android:background="@drawable/shape_rounded_8"
        android:backgroundTint="@color/grey_5" />

    <Space
        android:layout_width="0dp"
        android:layout_height="24dp" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <ImageButton
                    android:layout_width="48dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:contentDescription="@string/cd_search"
                    android:scaleType="centerInside"
                    android:src="@drawable/flight2"
                    tools:style="?attr/imageButtonStyle" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:paddingBottom="8dp"
                    android:layout_weight="1">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/dest_city"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:text="Минск" />
                </com.google.android.material.textfield.TextInputLayout>
                    <ImageButton
                        android:id="@+id/exchange"
                        android:layout_width="48dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical"
                        android:contentDescription="@string/cd_search"
                        android:paddingStart="24dp"
                        android:paddingEnd="0dp"
                        android:src="@drawable/up_down"
                        tools:style="?attr/imageButtonStyle" />
                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?attr/colorOnBackground" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <ImageButton
                    android:paddingTop="8dp"
                    android:layout_width="48dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:contentDescription="@string/cd_search"
                    app:tint="@color/white"
                    android:scaleType="fitCenter"
                    android:src="@drawable/search"
                    tools:style="?attr/imageButtonStyle" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingTop="8dp"
                    app:hintEnabled="false">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/dest_country"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/dest_country_hint" />
                </com.google.android.material.textfield.TextInputLayout>

                    <ImageButton
                        android:id="@+id/clear"
                        android:layout_width="48dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical"
                        android:contentDescription="@string/cd_search"
                        android:paddingStart="24dp"
                        android:paddingEnd="0dp"
                        android:src="@drawable/mult_cross"
                        tools:style="?attr/imageButtonStyle" />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="24dp"
        android:paddingBottom="24dp">

        <LinearLayout
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageButton
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:background="@drawable/shape_rounded_8"
                android:backgroundTint="#FF3A633B"
                android:contentDescription="@string/cd_search"
                android:scaleType="centerInside"
                android:src="@drawable/route_complex" />

            <!--android:textAppearance="@style/Theme.Effectivem.TextAppearance.BodyMedium"-->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="Сложный маршрут" />
        </LinearLayout>

        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageButton
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:background="@drawable/shape_rounded_8"
                android:backgroundTint="#FF2261BC"
                android:contentDescription="@string/cd_search"
                android:scaleType="centerInside"
                android:src="@drawable/route_whenever" />

            <!--android:textAppearance="@style/Theme.Effectivem.TextAppearance.BodyMedium"-->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="Куда угодно" />
        </LinearLayout>

        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageButton
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:background="@drawable/shape_rounded_8"
                android:backgroundTint="#FF00427D"
                android:contentDescription="@string/cd_search"
                android:scaleType="centerInside"
                android:src="@drawable/route_weekend" />

            <!--android:textAppearance="@style/Theme.Effectivem.TextAppearance.BodyMedium"-->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="Выходные" />
        </LinearLayout>

        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />


        <LinearLayout
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageButton
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:background="@drawable/shape_rounded_8"
                android:backgroundTint="#FFFF5E5E"
                android:contentDescription="@string/cd_search"
                android:scaleType="centerInside"
                android:src="@drawable/route_flame" />

            <!--android:textAppearance="@style/Theme.Effectivem.TextAppearance.BodyMedium"-->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="Горячие билеты" />
        </LinearLayout>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:background="@drawable/shape_rounded_8"
                        android:clipToOutline="true"
                        android:scaleType="centerCrop"
                        android:src="@drawable/stambul" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingStart="@dimen/view_padding_half"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAppearance="?attr/textAppearanceTitleSmall"
                            android:text="Стамбул" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAppearance="?attr/textAppearanceBody2"
                            android:textColor="@color/grey_5"
                            android:text="@string/popular_route" />
                    </LinearLayout>
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="?attr/colorOnBackground" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingTop="16dp"
                    android:paddingBottom="8dp">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:background="@drawable/shape_rounded_8"
                        android:clipToOutline="true"
                        android:scaleType="centerCrop"
                        android:src="@drawable/sochi" />

                    <LinearLayout
                        android:paddingStart="@dimen/view_padding_half"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAppearance="?attr/textAppearanceTitleSmall"
                            android:text="Сочи" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAppearance="?attr/textAppearanceBody2"
                            android:textColor="@color/grey_5"
                            android:text="@string/popular_route" />
                    </LinearLayout>
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="?attr/colorOnBackground" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingTop="16dp"
                    android:paddingBottom="8dp">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:background="@drawable/shape_rounded_8"
                        android:clipToOutline="true"
                        android:scaleType="centerCrop"
                        android:src="@drawable/phuket" />

                    <LinearLayout
                        android:paddingStart="@dimen/view_padding_half"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAppearance="?attr/textAppearanceTitleSmall"
                            android:text="Пхукет" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAppearance="?attr/textAppearanceBody2"
                            android:textColor="@color/grey_5"
                            android:text="@string/popular_route" />
                    </LinearLayout>
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="?attr/colorOnBackground" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </ScrollView>

</LinearLayout>